tests/typecheck/should_compile/T14149.stderr

T14149.hs:8:5: error: [GHC-18872]
    • Couldn't match representation of type ‘Int’ with that of ‘Bool’
        arising from a use of ‘coerce’
    • In the expression: coerce (k :: Int)
      In an equation for ‘f’: f = coerce (k :: Int)
